--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -83,11 +83,11 @@ These lexical entries lead to the grammaticality pattern shown in Table \ref{tbl
     \label{tbl:overview-intonly}
 \end{table}
 
-Consider the first situation in which the internal and the external case match. The light head consists of a phi and case feature portmanteau. The relative pronoun consists of the same morpheme plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is structurally contained within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun surfaces, bearing the internal case.
+Consider the first situation in which the internal and the external case match. The light head consists of a phi and case feature portmanteau. The relative pronoun consists of the same morpheme plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is structurally contained in the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun surfaces, bearing the internal case.
 
-Consider now the situation in the internal case wins the case competition. The light head consists of a phi and case feature portmanteau. The relative pronoun consists of a phi and case feature portmanteau that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}) plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is structurally contained within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun surfaces, bearing the internal case.
+Consider now the situation in the internal case wins the case competition. The light head consists of a phi and case feature portmanteau. The relative pronoun consists of a phi and case feature portmanteau that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}) plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is structurally contained in the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun surfaces, bearing the internal case.
 
-Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of a phi and case feature portmanteau and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally contained within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
+Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of a phi and case feature portmanteau and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally contained in the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
 
 In Chapter \ref{ch:typology}, I showed that Modern German is a language of the internal-only type. In this chapter, I show that Modern German light heads and relative pronouns have the type of internal syntax described in Figure \ref{fig:rel-lh-intonly-simple}. I give a compact version of the internal syntax of Modern German light heads and relative pronouns in Figure \ref{fig:rel-lh-mg}.
 
@@ -147,7 +147,7 @@ Consider the light head in Figure \ref{fig:rel-lh-mg}.
 Light heads (i.e. phi and case features) in Modern German are spelled out by a single morpheme, indicated by the circle around the structure. They are spelled out as \tit{n} or \tit{m}, depending on which case they realize.
 Consider the relative pronoun in Figure \ref{fig:rel-lh-mg}.
 Relative pronouns in Modern German consist of two morphemes: the constituent that forms the light head (i.e. phi and case features) and the \tsc{rel}P, again indicated by the circles. The constituent that forms the light head has the same spellout as in the light head (\tit{n} or \tit{m}), and the \tsc{rel}P is spelled out as \tit{we}.
-Throughout this chapter, I discuss the exact feature content of light heads and relative pronouns, I give lexical entries for them, and I show how these lexical entries lead to the internal syntax of light heads and relative pronoun as shown in Figure \ref{fig:rel-lh-mg}.
+Throughout this chapter, I discuss the exact feature content of light heads and relative pronouns, I give lexical entries for them, and I show how these lexical entries lead to the internal syntax shown in Figure \ref{fig:rel-lh-mg}.
 
 The chapter is structured as follows.
 First, I discuss the relative pronoun. I start by decomposing it into the two morphemes I showed in Figure \ref{fig:rel-lh-mg}. Then I show which features each of the morphemes corresponds to. I illustrate how different morphemes are combined into the internal syntax in Figure \ref{fig:rel-lh-mg}.
@@ -1189,7 +1189,7 @@ To summarize, I decomposed the relative pronoun into the two morphemes: \tit{we}
 
 \section{The Modern German (extra) light head}\label{sec:light-mg}
 
-I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them is structurally contained within the other one. In the introduction of this chapter, I claimed that the internal syntax of light heads in Modern German looks as shown in \ref{ex:mg-lh-complex}.
+I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them is structurally contained in the other one. In the introduction of this chapter, I claimed that the internal syntax of light heads in Modern German looks as shown in \ref{ex:mg-lh-complex}.
 
 \ex.\label{ex:mg-lh-complex}
 \begin{forest} boom
@@ -1531,7 +1531,7 @@ I give three examples, in which the internal and external case vary.
 I start with an example with matching cases, in which the internal and the external case are both accusative.
 Then I give an example in which the internal dative case is more complex than the external accusative case.
 I end with an example in which the external dative case is more complex than the internal accusative case.
-I show that the first two examples are grammatical and the last one is not. I derive this by showing that only in the first two situations the light head is structurally contained within the relative pronoun, and that it can therefore then be deleted.
+I show that the first two examples are grammatical and the last one is not. I derive this by showing that only in the first two situations the light head is structurally contained in the relative pronoun, and that it can therefore then be deleted.
 In the last example, neither the light head nor the relative pronoun is structurally contained in the other element.
 I do not discuss formal containment in this chapter, because it never leads to a successful deletion when structural containment does not.
 
@@ -1614,13 +1614,13 @@ In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra ligh
   \label{fig:mg-int=ext}
 \end{figure}
 
-The relative pronoun consists of two morphemes: \tit{we} and \tit{n}.
 The extra light head consists of a single morpheme: \tit{n}.
+The relative pronoun consists of two morphemes: \tit{we} and \tit{n}.
 As usual, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
 I draw a dashed circle around the biggest possible element that is structurally contained in both the extra light head and the relative pronoun.
 
 The extra light head consists of a single morpheme: the \tsc{acc}P.
-This \tsc{acc}P is structurally contained within the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
+This \tsc{acc}P is structurally contained in the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
 The surface pronoun is the relative pronoun that bears the internal case: \tit{wen}.
 
 I continue with the situation in which the internal case is the more complex one.
@@ -1708,13 +1708,13 @@ In Figure \ref{fig:mg-int-wins}, I give the syntactic structure of the extra lig
   \label{fig:mg-int-wins}
 \end{figure}
 
-The relative pronoun consists of two morphemes: \tit{we} and \tit{m}.
 The extra light head consists of a single morpheme: \tit{n}.
+The relative pronoun consists of two morphemes: \tit{we} and \tit{m}.
 Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
 I draw a dashed circle around the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of a single morpheme: the \tsc{acc}P.
-This \tsc{acc}P is structurally contained within the relative pronoun. Therefore, the extra light can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
+This \tsc{acc}P is structurally contained in the relative pronoun. Therefore, the extra light can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
 The surface pronoun is the relative pronoun that bears the internal case: \tit{wem}.
 
 I end with the situation in which the external case is the more complex one.
@@ -1807,18 +1807,20 @@ In Figure \ref{fig:mg-ext-wins}, I give the syntactic structure of the extra lig
   \label{fig:mg-ext-wins}
 \end{figure}
 
-The relative pronoun consists of two morphemes: \tit{we} and \tit{n}.
 The extra light head consists of a single morpheme: \tit{m}.
+The relative pronoun consists of two morphemes: \tit{we} and \tit{n}.
 Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
 I draw a dashed circle around the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
 
-In this case, the light head is not structurally contained within the relative pronoun.
+In this case, the light head is not structurally contained in the relative pronoun.
 The extra light head consists of a single morpheme: the \tsc{dat}P.
 The relative pronoun only contains the \tsc{acc}P, and it lacks the \tsc{f}3 that makes a \tsc{dat}P. Since the weaker feature containment requirement is not met, the stronger constituent containment requirement cannot be met either.
 
-The relative pronoun is not structurally contained within the light head. It namely lacks the complete constituent and \tsc{rel}P.
+The relative pronoun is not structurally contained in the light head. It namely lacks the complete constituent and \tsc{rel}P.
 Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
-As a result, there is no grammatical headless relative possible.
+As a result, there is no grammatical headless relative possible.\footnote{
+The only exception is when there is a syncretism.
+}
 
 \section{Summary}
 
@@ -1878,6 +1880,6 @@ I derive this from the internal syntax of light heads and relative pronouns in M
   \label{fig:rel-lh-mg-sum}
 \end{figure}
 
-A crucial characteristic of internal-only languages such as Modern German is that they have a portmanteau for phi and case features. Therefore, the light head is structurally contained within the relative pronoun when the internal and the external case match and when the internal case is the more complex one. As a result, the light head can be deleted, and the relative pronoun can surface, bearing the internal case.
+A crucial characteristic of internal-only languages such as Modern German is that they have a portmanteau for phi and case features. Therefore, the light head is structurally contained in the relative pronoun when the internal and the external case match and when the internal case is the more complex one. As a result, the light head can be deleted, and the relative pronoun can surface, bearing the internal case.
 
-When the internal case is the more complex one, neither the light head nor the relative pronoun is structurally contained within the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
+When the internal case is the more complex one, neither the light head nor the relative pronoun is structurally contained in the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
