--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -97,13 +97,13 @@ These lexical entries lead to the grammaticality pattern shown in Table \ref{tbl
 \label{tbl:overview-matching}
 \end{table}
 
-Consider first the situation in which the internal and the external case match. The light head consists of a phi feature morpheme and a case feature morpheme. The relative pronoun consists of the same two morphemes plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is structurally contained within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun surfaces, bearing the internal case.
+Consider first the situation in which the internal and the external case match. The light head consists of a phi feature morpheme and a case feature morpheme. The relative pronoun consists of the same two morphemes plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is structurally contained in the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun surfaces, bearing the internal case.
 In this situation, whether there is a phi and case feature portmanteau (as in internal-only languages) or two separate morphemes for the features (as in matching languages) does not make a difference for whether or not the light head can be deleted. It can in both cases.
 
-Consider now the situation in the internal case wins the case competition. The light head consists of a phi feature morpheme and a case feature morpheme. The relative pronoun consists of the same phi feature morpheme, a case morpheme that that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-matching}) plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally contained within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
+Consider now the situation in the internal case wins the case competition. The light head consists of a phi feature morpheme and a case feature morpheme. The relative pronoun consists of the same phi feature morpheme, a case morpheme that that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-matching}) plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally contained in the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
 In this situation, whether there is a phi and case feature portmanteau (as in internal-only languages) or two separate morphemes for the features (as in matching languages) makes crucial difference for whether or not the light head can be deleted. It can when there is a phi and case feature portmanteau and it cannot when there are two separate morphemes for the features.
 
-Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of a phi feature morpheme, a case feature morpheme and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-matching}). The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally contained within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
+Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of a phi feature morpheme, a case feature morpheme and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-matching}). The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally contained in the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
 In this situation, whether there is a phi and case feature portmanteau (as in internal-only languages) or two separate morphemes for the features (as in matching languages) does not make a difference for whether or not the light head or the relative pronoun can be deleted. It cannot in both cases.
 
 In Chapter \ref{ch:typology}, I showed that Polish is a language of the matching type. In this chapter, I show that Polish light heads and relative pronouns have the type of internal syntax described in Figure \ref{fig:rel-lh-matching-simple}. I give a compact version of the internal syntax of Polish light heads and relative pronouns in Figure \ref{fig:rel-lh-pol}.
@@ -182,7 +182,7 @@ Consider the light head in Figure \ref{fig:rel-lh-pol}.
 Light heads (i.e. the phi and case features) in Polish are spelled out by two morphemes, which are both circled. The phi features are spelled out as \tit{o} and the case features are spelled out as \tit{go} or \tit{mu}, depending on which case they realize.
 Consider the relative pronoun in Figure \ref{fig:rel-lh-pol}.
 Relative pronouns in Polish consist of three morphemes: the constituent that forms the light head (i.e. phi and case feature morphemes) and the \tsc{rel}P, again indicated by the circles. The constituent that forms the light head has the same spellout as in the light head (\tit{o} and \tit{go} or \tit{mu}), and the \tsc{rel}P is spelled out as \tit{k}.
-Throughout this chapter, I discuss the exact feature content of relative pronouns and light heads, I give lexical entries for them, and I show how these lexical entries lead to the internal syntax of light heads and relative pronoun as shown in Figure \ref{fig:rel-lh-pol}.
+Throughout this chapter, I discuss the exact feature content of relative pronouns and light heads, I give lexical entries for them, and I show how these lexical entries lead to the internal syntax shown in Figure \ref{fig:rel-lh-pol}.
 
 The chapter is structured as follows.
 First, I discuss the relative pronoun. I decompose it into the three morphemes I showed in Figure \ref{fig:rel-lh-pol}. Then I show which features each of the morphemes corresponds to.
@@ -732,7 +732,7 @@ What these elements all have in common is that they are pronouns. Moreover, they
 
 Finally, I discuss morpheme \tit{k}. This morpheme corresponds to what I called the \tsc{rel}-feature in Chapter \ref{ch:the-basic-idea} and in the introduction to this chapter. I argue that this morpheme actually spells out the operator features \tsc{wh} and \tsc{rel} and number and gender features.
 
-I start with the operator features \tsc{wh} and \tsc{rel}. The Polish relative pronouns are \tsc{wh}-pronouns, and they are also used as interrogatives. Therefore, just like the Modern German \tit{we}, the Polish \tit{k} spells out the features \tsc{wh} and \tsc{rel}.
+I start with the operator features \tsc{wh} and \tsc{rel}. The Polish relative pronouns are \tsc{wh}-pronouns, and they are also used as interrogatives. Therefore, just as the Modern German \tit{we}, the Polish \tit{k} spells out the features \tsc{wh} and \tsc{rel}.
 
 Finally, since the relative pronouns do not have a morphological plural, I assume that \tit{k} contains the feature \tsc{ind}.
 Lastly, I assume that \tit{k} also contains the features \tsc{an} and \tsc{cl}. For this I do not have any independent support. I make this assumption to make room for the \tit{i} to be inserted in the inanimate.\footnote{\label{ftn:inam-pointer}
@@ -1139,7 +1139,7 @@ To summarize, I decomposed the relative pronoun into three morphemes: \tit{k}, \
 
 \section{The Polish extra light head}\label{sec:pol-elh}
 
-I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them is structurally contained within the other one. In the introduction of this chapter, I claimed that the internal syntax of light heads in Polish looks as shown in \ref{ex:pol-lh-complex}.
+I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them is structurally contained in the other one. In the introduction of this chapter, I claimed that the internal syntax of light heads in Polish looks as shown in \ref{ex:pol-lh-complex}.
 
 \ex.\label{ex:pol-lh-complex}
 \begin{forest} boom
@@ -1165,7 +1165,7 @@ I have suggested that headless relatives are derived from light-headed relatives
 
 In Chapter \ref{ch:the-basic-idea}, I suggested that light heads consist of at least two features: ϕ and \tsc{k}.
 In this section, I determine the exact feature content of the light head.
-Like I suggested in Chapter \ref{ch:deriving-onlyinternal} for Modern German, I end up claiming that the phi and case features of the relative pronoun is the light head in headless relatives. I show the complete structure that I work towards in this section in \ref{ex:pol-elh}.
+As I suggested in Chapter \ref{ch:deriving-onlyinternal} for Modern German, I end up claiming that the phi and case features of the relative pronoun is the light head in headless relatives. I show the complete structure that I work towards in this section in \ref{ex:pol-elh}.
 
 % Crucially, the constituent structure in \ref{ex:pol-elh} is the same as in \ref{ex:simple-matching}. Recall from Chapter \ref{ch:deriving-onlyinternal} that in Modern German the extra light head spells out as a single constituent. The Polish extra light head consists of two constituents, as shown in \ref{ex:pol-elh}. This is the crucial difference between the two languages that leads them to be of different types in headless relatives.
 
@@ -1212,7 +1212,7 @@ Consider the existing Polish light-headed relative in \ref{ex:pol-light-headed}.
 Jan sings \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rp}.\tsc{an}.\tsc{acc} Maria sings\\
 `John sings what Mary sings.' \flushfill{Polish, \pgcitealt{citko2004}{103}}\label{ex:pol-light-headed}
 
-This light-headed relative, in which the demonstrative is the light head, could potentially be the source for headless relatives.
+This light-headed relative, in which the demonstrative is the light head, could potentially be the source of headless relatives.
 
 For Modern German, I gave two arguments for not taking this existing light-headed relative as source of the headless relative. In what follows, I show that these arguments hold for Polish in the same way as they did for Modern German.
 
@@ -1228,7 +1228,7 @@ Light-headed relatives do not allow this morpheme to be inserted, illustrated in
 Jan sings \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rp}.\tsc{an}.\tsc{acc} ever Maria sings\\
 `John sings what Mary sings.' \flushfill{Polish, \pgcitealt{citko2004}{116}}\label{ex:pol-headed-ever}
 
-Just like for Modern German, I assume that the headless relative is not derived from an ungrammatical structure.\footnote{
+just as for Modern German, I assume that the headless relative is not derived from an ungrammatical structure.\footnote{
 \citet{citko2004} takes the complementary distribution of \tit{kolwiek} `ever' and the light head to mean that they share the same syntactic position. I have nothing to say about the exact syntactic position of \tit{ever}, but in my account it cannot be the head of the relative clause, as this position is reserved for the extra light head. My reason for the incompatibility of \tit{ever} and the light head is that they are semantically incompatible.
 
 For concreteness, I assume \tit{ever} to be situated within the relative clause. Placing it in the main clause generates a different meaning, illustrated by the contrast in meaning between \ref{ex:cz-wh-ever} and \ref{ex:cz-ever-wh} in Czech.
@@ -1245,7 +1245,7 @@ For concreteness, I assume \tit{ever} to be situated within the relative clause.
 }
 
 The second argument against the existing light-headed relatives being the source of headless relatives comes from their interpretation. Headless relatives have two possible interpretations, and light-headed relatives have only one of these.
-Just like in Modern German, Polish headless relatives can be analyzed as either universal or definite \pgcitep{citko2004}{103}.
+just as in Modern German, Polish headless relatives can be analyzed as either universal or definite \pgcitep{citko2004}{103}.
 Light-headed relatives, such as the one in \ref{ex:pol-light-headed}, only have the definite interpretation.
 
 In the remainder of this section, I discuss the two extra light heads that I compare the internal syntax of in Section \ref{sec:comparing-polish}. The are the accusative animate and the dative animate, shown in \ref{ex:pol-elhs}.
@@ -1461,7 +1461,7 @@ This phrase is contained in the lexical tree in \ref{ex:pol-entry-mu-rep-lh}, so
 \end{forest}
 \end{adjustbox}
 
-In sum, Polish headless relatives are derived from a light-headed relative with an extra light head, just like they are in Modern German. The extra light head is spelled out a lexical entry that spells out phi features and another one that spells out case features. The lexical entries used to spell this light head out are also used to spell out part of the internal syntax of the relative pronoun.
+In sum, Polish headless relatives are derived from a light-headed relative with an extra light head, just as they are in Modern German. The extra light head is spelled out a lexical entry that spells out phi features and another one that spells out case features. The lexical entries used to spell this light head out are also used to spell out part of the internal syntax of the relative pronoun.
 
 
 \section{Comparing light heads and relative pronouns}\label{sec:comparing-polish}
@@ -1472,7 +1472,7 @@ I give three examples, in which the internal and external case vary.
 I start with an example with matching cases, in which the internal and the external case are both accusative.
 Then I give an example in which the internal dative case is more complex than the external accusative case.
 I end with an example in which the external dative case is more complex than the internal accusative case.
-I show that the first example is grammatical and that the last two are not. I derive this by showing that only in the first situation the light head is structurally contained within the relative pronoun, and that it can therefore then be deleted.
+I show that the first example is grammatical and that the last two are not. I derive this by showing that only in the first situation the light head is structurally contained in the relative pronoun, and that it can therefore then be deleted.
 In the other two examples, neither the light head nor the relative pronoun is structurally contained in the other element.
 I do not discuss formal containment in this chapter, because it never leads to a successful deletion when structural containment does not.
 
@@ -1575,13 +1575,13 @@ In Figure \ref{fig:polish-int=ext}, I give the syntactic structure of the extra 
   \label{fig:polish-int=ext}
 \end{figure}
 
-The relative pronoun consists of three morphemes: \tit{k}, \tit{o} and \tit{go}.
 The extra light head consists of two morphemes: \tit{o} and \tit{go}.
+The relative pronoun consists of three morphemes: \tit{k}, \tit{o} and \tit{go}.
 As usual, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
 I draw a dashed circle around the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of two constituents: the \tsc{an}P and the (lower) \tsc{acc}P. Together they form the (higher) \tsc{acc}P.
-This (higher) \tsc{acc}P is structurally contained within the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
+This (higher) \tsc{acc}P is structurally contained in the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
 The surface pronoun is the relative pronoun that bears the internal case: \tit{kogo}.
 
 I continue with the example in which the internal case is more complex than the external case.
@@ -1699,22 +1699,22 @@ In Figure \ref{fig:polish-int-wins}, I give the syntactic structure of the extra
   \label{fig:polish-int-wins}
 \end{figure}
 
-The relative pronoun consists of three morphemes: \tit{k}, \tit{o} and \tit{mu}.
 The light head consists of two morphemes: \tit{o} and \tit{go}.
+The relative pronoun consists of three morphemes: \tit{k}, \tit{o} and \tit{mu}.
 Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
 I draw a dashed circle around the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
 
-In this case, the light head is not a constituent that is structurally contained within the relative pronoun.
+In this case, the light head is not a constituent that is structurally contained in the relative pronoun.
 The extra light head consists of two constituents: the \tsc{an}P and the (lower) \tsc{acc}P. Together they form the (higher) \tsc{acc}P.
-Both of these constituents are also constituents that are structurally contained within the relative pronoun. However, the (higher) \tsc{acc}P is not a constituent that is structurally contained within the relative pronoun. The constituent in which the \tsc{acc}P is contained namely also contains the feature \tsc{f}3 that makes it a \tsc{dat}P.
-In other words, each feature and even each subconstituent of the extra light head is contained in the relative pronoun. However, they do not form a single constituent that is structurally contained within the relative pronoun. Therefore, the extra light head cannot be deleted.
+Both of these constituents are also constituents that are structurally contained in the relative pronoun. However, the (higher) \tsc{acc}P is not a constituent that is structurally contained in the relative pronoun. The constituent in which the \tsc{acc}P is contained namely also contains the feature \tsc{f}3 that makes it a \tsc{dat}P.
+In other words, each feature and even each subconstituent of the extra light head is contained in the relative pronoun. However, they do not form a single constituent that is structurally contained in the relative pronoun. Therefore, the extra light head cannot be deleted.
 
 Recall from Section \ref{sec:comparing-mg} that this is the crucial example in which Modern German and Polish differ. The contrast lies in that the extra light head in Modern German corresponds to a single lexical entry and in Polish it corresponds to two lexical entries.
-In Modern German, extra light heads in a less complex case form a constituent that is structurally contained within the relative pronoun.
+In Modern German, extra light heads in a less complex case form a constituent that is structurally contained in the relative pronoun.
 In Polish, they do not.
-Relative pronouns in a complex case still contain all features of the extra light head in a less complex case, but the extra light head does not form a single constituent that is structurally contained within the relative pronoun. That is, the weaker feature containment requirement is met, but the stronger constituent containment requirement is not. This shows the necessity of formulating the proposal in terms of containment as a single constituent.
+Relative pronouns in a complex case still contain all features of the extra light head in a less complex case, but the extra light head does not form a single constituent that is structurally contained in the relative pronoun. That is, the weaker feature containment requirement is met, but the stronger constituent containment requirement is not. This shows the necessity of formulating the proposal in terms of containment as a single constituent.
 
-The relative pronoun is not a constituent that is structurally or formally contained within the light head. It namely lacks the complete constituent and \tsc{rel}P.
+The relative pronoun is not a constituent that is structurally or formally contained in the light head. It namely lacks the complete constituent and \tsc{rel}P.
 Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
 As a result, there is no grammatical headless relative possible.
 
@@ -1834,16 +1834,16 @@ In Figure \ref{fig:polish-ext-wins}, I give the syntactic structure of the extra
   \label{fig:polish-ext-wins}
 \end{figure}
 
-The relative pronoun consists of three morphemes: \tit{k}, \tit{o} and \tit{go}.
 The light head consists of two morphemes: \tit{o} and \tit{mu}.
+The relative pronoun consists of three morphemes: \tit{k}, \tit{o} and \tit{go}.
 Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
 I draw a dashed circle around the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
 
-In this case, the light head is not a constituent that is structurally contained within the relative pronoun.
+In this case, the light head is not a constituent that is structurally contained in the relative pronoun.
 The light head consists of two morphemes: \tit{o} and \tit{mu}.
 The relative pronoun only contains the \tsc{acc}P, and it lacks the \tsc{f}3 that makes a \tsc{dat}P. Since the weaker feature containment requirement is not met, the stronger constituent containment requirement cannot be met either.
 
-The relative pronoun is not a constituent that is structurally contained within the light head. It namely lacks the complete constituent \tsc{rel}P.
+The relative pronoun is not a constituent that is structurally contained in the light head. It namely lacks the complete constituent \tsc{rel}P.
 Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
 As a result, there is no grammatical headless relative possible.
 
@@ -1924,6 +1924,6 @@ I derive this from the internal syntax of light heads and relative pronouns in P
   \label{fig:rel-lh-pol-sum}
 \end{figure}
 
-A crucial characteristic of matching languages such as Polish is that they have separate morphemes for phi and case features. Therefore, the light head is structurally contained within the relative pronoun when the internal and the external case match. As a result, the light head can be deleted, and the relative pronoun can surface, bearing the internal case.
+A crucial characteristic of matching languages such as Polish is that they have separate morphemes for phi and case features. Therefore, the light head is structurally contained in the relative pronoun when the internal and the external case match. As a result, the light head can be deleted, and the relative pronoun can surface, bearing the internal case.
 
-When the internal and external case differ, neither the light head nor the relative pronoun is structurally contained within the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
+When the internal and external case differ, neither the light head nor the relative pronoun is structurally contained in the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
