--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -6,6 +6,11 @@
   tag = abbr
 }
 
+\DeclareAcronym{lh}{
+  short = \tsc{lh} ,
+  long  = light head ,
+  tag = abbr
+}
 
 \DeclareAcronym{int}{
   short = \tsc{int} ,
