--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -876,7 +876,7 @@
 
 @book{kayne1994,
   title={The antisymmetry of syntax},
-  author={Kayne, Richard S and Kayne, Richard S and others},
+  author={Kayne, Richard S},
   volume={25},
   year={1994},
   publisher={MIT press}
