--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -2,7 +2,7 @@
 
 \chapter{The source of variation}\label{ch:the-basic-idea}
 
-In Chapter \ref{ch:typology}, I introduced two descriptive parameters that describe the differences between the attested languages. I repeat the overview in Figure \ref{fig:two-parameters}.
+In Chapter \ref{ch:typology}, I introduced tfwo descriptive parameters that describe the differences between the attested languages. I repeat the overview in Figure \ref{fig:two-parameters}.
 
 \begin{figure}[htbp]
   \centering
@@ -1110,7 +1110,7 @@ In Figure \ref{fig:acc-nom-syn}, I give the example in which the light head bear
         scale=0.9,
         fit to=tree]{};
         \node[draw,circle,
-        dotted,ultra thick,
+        dotted,very thick,
         fill=DG,fill opacity=0.2,
         scale=0.95,
         fit to=tree]{};
@@ -1133,7 +1133,7 @@ In Figure \ref{fig:acc-nom-syn}, I give the example in which the light head bear
             [\tsc{nom}P,
             tikz={
             \node[draw,circle,
-            dotted,ultra thick,
+            dotted,very thick,
             scale=0.9,
             fit to=tree]{};
             \node[label=below:\tit{s},
@@ -1358,7 +1358,7 @@ In Figure \ref{fig:nom-nom-unres}, I give an example in which this can happen. I
         tikz={
         \node[draw,
         constituent-deletion,yshift=-0.4cm,
-        dotted,ultra thick,
+        dotted,very thick,
         scale=1.3,
         fit to=tree]{};
         }
@@ -1391,7 +1391,7 @@ In Figure \ref{fig:nom-nom-unres}, I give an example in which this can happen. I
         tikz={
         \node[draw,
         constituent-deletion,yshift=-0.4cm,
-        dotted,ultra thick,
+        dotted,very thick,
         fill=DG,fill opacity=0.2,
         scale=1.25,
         fit to=tree]{};
@@ -1455,7 +1455,7 @@ In Figure \ref{fig:acc-nom-unres} I give an example of the second possible light
             scale=0.85,
             fit to=tree]{};
             \node[draw,circle,
-            dotted,ultra thick,
+            dotted,very thick,
             scale=0.9,
             fit to=tree]{};
             }
@@ -1488,7 +1488,7 @@ In Figure \ref{fig:acc-nom-unres} I give an example of the second possible light
             scale=0.85,
             fit to=tree]{};
             \node[draw,circle,
-            dotted,ultra thick,
+            dotted,very thick,
             scale=0.9,
             fit to=tree]{};
             }
